--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootswatch": "^4.6.0",
+    "dayjs": "^1.10.4",
     "firebase": "^8.4.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-fade-in": "^2.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
